# astro_navigation

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLAN.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  reproduction.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  build_star_pair_index.cpp  hazard_route_demo.cpp  lost_in_space_pair_id.cpp  lunar_visual_odometry.cpp  mission_navigation_demo.cpp  star_tracker_attitude.cpp  stereo_visual_odometry.cpp
benchmarks/: run_hyg_ambiguity_benchmark.py  run_hyg_pair_index_benchmark.py  run_hyg_pair_index_false_scaling.py  run_hyg_pair_index_observation_scaling.py  run_hyg_pair_index_robustness.py  run_lost_in_space_benchmark.py  run_lost_in_space_robustness.py  run_polar_traverse_suite.py  run_star_tracker_benchmark.py  run_visual_odometry_benchmark.py  summarize_exposure_sweep.py
core/: CMakeLists.txt
core/include/astro_localization/core/: image_sequence.hpp
core/include/astro_navigation/core/: image_sequence.hpp  types.hpp
core/src/: image_sequence.cpp
crater/: CMakeLists.txt
crater/include/astro_localization/crater/: crater_detector.hpp
crater/include/astro_navigation/crater/: crater_detector.hpp
crater/src/: crater_detector.cpp
datasets/: README.md
docs/: decisions.md  demo_gallery.md  experiments.md  github_about.md  interfaces.md  navigation_status_for_review.md  space_localization.md
docs/figures/: confidence_aware_replanning_demo.json  dynamic_hazard_replanning_demo.json  hazard_aware_navigation_demo.json  localizability_aware_route.json  lost_robot_challenge.json  navigation_replay_demo.json  trn_confidence_heatmap.json
docs/figures/skyline_lock/: converse_cliff.json  factor_graph_fusion.json  factor_graph_so2.json  factor_graph_so3.json  factor_graph_so3_stereo.json  four_factor_fusion.json  skyline_curvature.json  skyline_localizability_route.json
docs/figures/trn_lro_apollo11/: summary.json
docs/figures/trn_lro_tycho/: summary.json
docs/figures/trn_lro_tycho_terminal/: summary.json
docs/figures/trn_synthetic/: summary.json
docs/schemas/: nav_state.schema.json
localization/: CMakeLists.txt
localization/include/astro_localization/localization/: pair_id_solver.hpp  pair_index_loader.hpp  star_tracker.hpp  stereo_visual_odometry.hpp  visual_odometry.hpp
localization/include/astro_navigation/localization/: pair_id_solver.hpp  pair_index_loader.hpp  star_tracker.hpp  stereo_visual_odometry.hpp  visual_odometry.hpp
localization/src/: pair_id_solver.cpp  pair_index_loader.cpp  star_tracker.cpp  stereo_visual_odometry.cpp  visual_odometry.cpp
navigation/: CMakeLists.txt
navigation/include/astro_navigation/navigation/: hazard_guidance.hpp  pipeline.hpp  state.hpp  state_io.hpp  trn_summary.hpp
navigation/src/: hazard_guidance.cpp  pipeline.cpp  state.cpp  state_io.cpp  trn_summary.cpp
scripts/: apply_star_identifications.py  build_star_pair_index.py  build_star_triangle_index.py  centroid_stars_from_image.py  converse_cliff_demo.py  convert_star_catalog.py  download_dataset.py  download_star_catalog.py  drop_star_ids.py  evaluate_trajectory.py  factor_graph_fusion_demo.py  factor_graph_so2_demo.py  factor_graph_so3_demo.py  factor_graph_so3_stereo_demo.py  filter_star_catalog.py  four_factor_fusion_demo.py  generate_star_tracker_case.py  generate_star_tracker_observations_from_catalog.py  identify_stars_by_triangles.py  identify_stars_with_index.py  identify_stars_with_pair_index.py  lost_robot_challenge.py  lro_trn_demo.py  plot_trajectory.py  plot_trajectory_comparison.py  prepare_polar_traverse.py  render_confidence_aware_replanning_demo.py  render_constellation_demo_gif.py  render_converse_cliff_demo.py  render_dynamic_hazard_replanning_demo.py  render_factor_graph_fusion_demo.py  render_factor_graph_so2_demo.py  render_factor_graph_so3_demo.py  render_factor_graph_so3_stereo_demo.py  render_four_factor_fusion_demo.py  render_hazard_aware_navigation_demo.py  render_localizability_aware_route.py  render_lost_in_space_gif.py  render_mission_demo_gif.py  render_navigation_replay_demo.py  (+11 more)
terrain/: CMakeLists.txt
terrain/include/astro_localization/terrain/: landmarks.hpp
terrain/include/astro_navigation/terrain/: landmarks.hpp
terrain/src/: landmarks.cpp
tests/: CMakeLists.txt  hazard_guidance_smoke.cpp  hazard_route_cli_smoke.cpp  mission_navigation_cli_smoke.cpp  navigation_state_smoke.cpp
visualization/: CMakeLists.txt
visualization/include/astro_localization/visualization/: trajectory_io.hpp
visualization/include/astro_navigation/visualization/: trajectory_io.hpp
visualization/src/: trajectory_io.cpp
